--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,13 @@
   font-weight: 400;
 }
 
+.retro-error-message {
+  color: #282c34;
+  font-family: 'Raleway', sans-serif !important;
+  font-size: 15px !important;
+  font-weight: 400;
+}
+
 .toast-color {
   background-color: #ed143d !important;
 }
@@ -71,4 +78,9 @@
   /* right: auto !important;
   bottom: 10%;
   right:7%;   */
+}
+
+.toast-retro {
+  top: 150px !important;
+  left: -220%;
 }
