--- a/src/index.css
+++ b/src/index.css
@@ -50,7 +50,7 @@ input {
 
 nav {
   color: #fff;
-  background-color: #ed143d !important;
+  /* background-color: #ed143d; */
   width: 100%;
   height: 62px;
   line-height: 56px;
@@ -220,7 +220,8 @@ div.task-header > select {
 
 
 .like-content {
-  border-top: 1px solid #ce2626;
+  /* border-top: 1px solid #ce2626; */
+  border-top: 1px solid rgba(66, 43, 43, 0.2);
   background-color: #ed133d; /* #ed1717 */
   display: inline-flex;
   font-size: 15px;
