--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   width: 100%;
   height: 100%;
 }
@@ -131,7 +132,7 @@ hr {
   display: inline-grid;
   margin-bottom: 22px;
   background: #2b2e94;
-  box-shadow: 0 -1px 0 #e0e0e0, 0 0 2px rgba(0,0,0,.12), 0 2px 4px rgba(0,0,0,.24);
+  box-shadow: 0 -1px 0 #e0e0e0, 0 0 2px rgba(0, 0, 0, .12), 0 2px 4px rgba(0, 0, 0, .24);
 }
 
 .task-header {
@@ -140,7 +141,8 @@ hr {
   display: inline-flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #ed133d; /* #d71c1c #2b2e94 #36398c #960c0c #ed1717 */
+  background-color: #ed133d;
+  /* #d71c1c #2b2e94 #36398c #960c0c #ed1717 */
   min-width: 334px;
   max-width: 334px;
 }
@@ -150,14 +152,15 @@ hr {
   display: inline-block;
   justify-content: space-between;
   align-items: center;
-  background-color: #ed133d; /* #d71c1c #2b2e94 #36398c #960c0c #ed1717 */
+  background-color: #ed133d;
+  /* #d71c1c #2b2e94 #36398c #960c0c #ed1717 */
 }
 
-div.task-header > div {
+div.task-header>div {
   color: #fff;
 }
 
-div.task-header > select {
+div.task-header>select {
   border: 3px solid #ed143d;
   /* box-shadow: 0 -1px 0 #e0e0e0, 0 0 2px rgba(0,0,0,.12), 0 2px 4px rgba(0,0,0,.24); */
   background-color: #ed143d;
@@ -187,7 +190,7 @@ div.task-header > select {
 
 .item-col-space {
   padding: 0 18px;
-  max-width: 335px;
+  max-width: 362px;
 }
 
 .tasks-loading {
@@ -211,7 +214,7 @@ div.task-header > select {
   left: 67% !important;
 }
 
-.dropdown-content li > a {
+.dropdown-content li>a {
   color: black !important;
 }
 
@@ -222,17 +225,20 @@ div.task-header > select {
 .like-content {
   /* border-top: 1px solid #ce2626; */
   border-top: 1px solid rgba(66, 43, 43, 0.2);
-  background-color: #ed133d; /* #ed1717 */
+  background-color: #ed133d;
+  /* #ed1717 */
   display: inline-flex;
   font-size: 15px;
   text-align: center;
   min-height: 27px;
   max-height: 27px;
 }
+
 .like-content span {
-color: #9d9da4;
-font-family: monospace;
+  color: #9d9da4;
+  font-family: monospace;
 }
+
 .like-content .btn-secondary {
   display: contents;
   text-align: center;
@@ -249,19 +255,28 @@ font-family: monospace;
   -webkit-transition: 0.3s ease;
   transition: 0.3s ease;
 }
+
 .like-content .btn-secondary:hover {
   transform: translateY(-3px);
 }
+
 .like-content .btn-secondary .fa {
   margin-right: 5px;
 }
+
 .animate-like {
-animation-name: likeAnimation;
-animation-iteration-count: 1;
-animation-fill-mode: forwards;
-animation-duration: 0.65s;
+  animation-name: likeAnimation;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+  animation-duration: 0.65s;
 }
+
 @keyframes likeAnimation {
-0%   { transform: scale(30); }
-100% { transform: scale(1); }
+  0% {
+    transform: scale(30);
+  }
+
+  100% {
+    transform: scale(1);
+  }
 }
