--- a/src/App.css
+++ b/src/App.css
@@ -217,3 +217,23 @@ nav {
   width: 170px !important;
   left: 79% !important;
 }
+
+input {
+  width: 100% !important;
+  color: #000000;
+  border-radius: 8px !important;
+  padding: 15px !important;
+  margin: 10px !important;
+  outline: none !important;
+  box-sizing: border-box !important;
+  font-size: 100%;
+  /* font-size: 16px; */
+}
+
+.form-group {
+  width: 100%;
+}
+
+.btn-login {
+  margin: 5px;
+}
