--- a/src/App.css
+++ b/src/App.css
@@ -219,6 +219,7 @@ nav {
 }
 
 input {
+  background-color: #e8f0fe !important;
   width: 100% !important;
   color: #000000;
   border-radius: 8px !important;
