--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ body {
 }
 
 input {
-  border: 1px solid #E0E0E0 !important;
+  border: 1px solid #E0E0E0;
   border-radius: 3px;
   padding: 15px 0;
   box-sizing: border-box;
