--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,8 @@
 }
 
 .modal-team-form {
-  padding-left: 2%;
+  margin-top: 20px;
+  /* padding-left: 2%; */
 }
 
 .modal-close-position {
@@ -195,7 +196,8 @@ i.custom-small {
 }
 
 nav {
-  min-height: 64px !important;
+  min-height: 68px !important;
+  line-height: 68px !important;
 }
 
 .menu {
