--- a/src/App.css
+++ b/src/App.css
@@ -221,18 +221,28 @@ nav {
 }
 
 .login {
-  border: 1px solid #E0E0E0 !important;
-  background-color: #e8f0fe !important;
+  /* border: 1px solid #E0E0E0 !important; */
+  background-color: aliceblue !important;
   width: 100% !important;
-  color: #000000;
-  border-radius: 8px !important;
+  height: 46px !important;
+  /* color: #000000; */
+  /* border-radius: 8px !important; */
   padding: 15px !important;
-  margin: 10px !important;
+  /* margin: 10px 0 !important; */
   outline: none !important;
   box-sizing: border-box !important;
   font-size: 100%;
-  font-size: 16px;
 }
+
+/* input:-webkit-autofill, input:-webkit-autofill:focus {
+  -webkit-box-shadow: 0 0 0px 1000px #53047c inset !important;
+  -webkit-text-fill-color: #fff !important;
+} */
+
+/* input:-webkit-autofill,
+input:-webkit-autofill:focus {
+  transition: background-color 0s 600000s, color 0s 600000s !important;
+} */
 
 .form-group {
   width: 100%;
@@ -240,4 +250,12 @@ nav {
 
 .btn-login {
   margin: 5px;
+}
+
+.nav-bar-admin {
+  position: absolute;
+  top: 10%;
+  background-color: transparent;
+  color: gray !important;
+  box-shadow: none !important;
 }
