--- a/src/index.css
+++ b/src/index.css
@@ -86,13 +86,25 @@ hr {
 }
 
 .button {
-  padding: 10px;
+  padding: 10px 20px;
   background: #76dc76;
   color: #fff;
   border: 1px solid transparent;
-  border-radius: 6px;
-  font: inherit;
-  cursor: pointer
+  border-radius: 24px;
+  font-size: 1em;
+  cursor: pointer;
+  box-shadow: 0 -1px 0 #e0e0e0, 0 0 2px rgba(0, 0, 0, .12), 0 2px 4px rgba(0, 0, 0, .24);
+}
+
+.add-team-btn {
+  border: 0;
+  padding: 10px 20px;
+  background: #76dc76;
+  color: #fff;
+  font-size: 1em;
+  cursor: pointer;
+  width: max-content;
+  height: 47px !important;
 }
 
 .button-default {
