--- a/src/index.css
+++ b/src/index.css
@@ -101,7 +101,7 @@ hr {
   padding: 10px 20px;
   background: #76dc76;
   color: #fff;
-  font-size: 1em;
+  font-size: 12px;
   cursor: pointer;
   width: max-content;
   height: 47px !important;
